--- a/index.html
+++ b/index.html
@@ -4,13 +4,93 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>replit</title>
-  <link rel="stylesheet" href="style.css">
+  <title>Andrew's stylin' with CSS</title>
+  <style>
+    html {
+      background:#ccc;
+    }
+
+    body {
+      font-family: Arial, Helvetica, sans-serif;
+      background-color: #fff;
+      max-width: 960px;
+      width: 90%;
+      margin:auto;
+      padding:1%;
+    }
+
+    h1.page-header {
+      font-family:'Inknut Antiqua',serif;
+      width: 80%;
+      margin: auto;
+      text-align: center;
+      text-shadow: 4px 4px 4px #aaa;
+    }
+
+    footer {
+      clear:both;
+      text-align:center;
+    }
+
+    table.my-table {
+      border-collapse: collapse;
+    }
+
+    table.my-table th {
+      background-color: #54585d;
+      color: #ffffff;
+      font-weight: bold;
+      font-size: 13px;
+      border: 1px solid #54585d;
+    }
+
+
+    table.my-table td {
+      padding: 15px;
+    }
+
+    table.my-table td {
+      color: #636363;
+      border: 1px solid #383c3f;
+    }
+
+    table.my-table tr {
+      background-color: #63aaf5;
+    }
+    
+    table.my-table tr:nth-child(odd) {
+      background-color: #ffffff;
+    }
+
+    /* start nav rules */
+    nav {
+      text-align: center; /* centers the nav */
+    }
+
+    nav a {
+      color:#000; /* font color set to black */
+    }
+
+    nav ul {
+      list-style: none; /* removes bullet points */
+    }
+
+    nav li {
+      display:inline-block; /* makes <li> horizontal, but able to declare margins */
+      margin:0 2%; /* margin left-right, gets smaller as necessary */
+    }
+
+    nav a:hover {
+      text-decoration: none; /* default u nderline goes away on hover */
+    }
+    /* end of nav rules */  
+
+  </style>
 
 </head>
 
 <body>
-  <h1>HTML ELEMENTS</h1>
+  <h1>Stylin' with CSS</h1>
   <p>This is content that's cool</p>
   <p>This is content that's cool</p>
   <p>This is content that's cool</p>
