--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     footer {
       clear:both;
       text-align:center;
+      padding: 5px;
     }
 
     table.my-table {
@@ -90,7 +91,7 @@
 </head>
 
 <body>
-  <h1>Stylin' with CSS</h1>
+  <h1 class="page-header">Stylin' with CSS</h1>
   <p>This is content that's cool</p>
   <p>This is content that's cool</p>
   <p>This is content that's cool</p>
@@ -134,7 +135,8 @@
       <td>Sue</td>
       <td>marysue@it116.com</td>
     </tr>
-
+  </table>
+  <footer> Copyright &copy; 2024</footer>
 </body>
 
 </html>
