Nav bar with links

--- a/index.html
+++ b/index.html
@@ -92,6 +92,15 @@
 
 <body>
   <h1 class="page-header">Stylin' with CSS</h1>
+  <nav>
+    <ul>
+      <li><a href="#">Link 1</a></li>
+      <li><a href="#">Link 2</a></li>
+      <li><a href="#">Link 3</a></li>
+      <li><a href="#">Link 4</a></li>
+      <li><a href="#">Link 5</a></li>
+    </ul>
+  </nav>
   <p>This is content that's cool</p>
   <p>This is content that's cool</p>
   <p>This is content that's cool</p>
