--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <meta name="viewport" content="width=device-width">
   <title>Andrew's stylin' with CSS</title>
   <style>
+
+    @import url('https://fonts.googleapis.com/css2?family=Inknut+Antiqua&display=swap');
+
     html {
       background:#ccc;
     }
@@ -25,6 +28,7 @@
       margin: auto;
       text-align: center;
       text-shadow: 4px 4px 4px #aaa;
+      background-color: rgb(205, 238, 238);
     }
 
     footer {
